--- a/src/Test/Management/modules/_protected/Jhoose.Security/module.config
+++ b/src/Test/Management/modules/_protected/Jhoose.Security/module.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <module loadFromBin="false" clientResourceRelativePath="" viewEngine="Razor" authorizationPolicy="episerver:cmsadmin">
     <assemblies>
-        <add assembly="Jhoose.Security.Admin" />
+        <add assembly="Jhoose.Security" />
     </assemblies>
   <!-- ... -->
   <clientResources>
