--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,11 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
+      working-directory: ./src
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore --source /src/csp.sln
+      working-directory: ./src
+      run: dotnet build --no-restore
     - name: Test
+      working-directory: ./src
       run: dotnet test --no-build --verbosity normal
