--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,10 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      working-directory: ./src
+      working-directory: ./src/Jhoose.Security.Core
       run: dotnet restore
     - name: Build
-      working-directory: ./src
+      working-directory: ./src/Jhoose.Security.Core
       run: dotnet build --no-restore
     - name: Test
       working-directory: ./src
