--- a/src/Jhoose.Security/Jhoose.Security.csproj
+++ b/src/Jhoose.Security/Jhoose.Security.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <PackageId>Jhoose.Security.Admin</PackageId>
+    <RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
     <Version>0.1.0-alpha.15</Version>
     <Authors>Andrew Markham</Authors>
   
@@ -14,12 +15,20 @@
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
-    <RestoreSources>
+    <RestoreSources Condition=" '$(Configuration)' == 'Debug' ">
       $(RestoreSources);
       /Users/andrewmarkham/DevRoot/Episerver/Content Security Policy/src/Jhoose.Security.Core/bin/Debug;
       https://api.nuget.org/v3/index.json;
       https://pkgs.dev.azure.com/EpiserverEngineering/netCore/_packaging/beta-program/nuget/v3/index.json;
     </RestoreSources>
+
+    <RestoreSources Condition=" '$(Configuration)' == 'Release' ">
+      $(RestoreSources);
+      https://nuget.pkg.github.com/andrewmarkham/index.json;
+      https://api.nuget.org/v3/index.json;
+      https://pkgs.dev.azure.com/EpiserverEngineering/netCore/_packaging/beta-program/nuget/v3/index.json;
+    </RestoreSources>
+
   </PropertyGroup>
 
   <ItemGroup>
@@ -30,13 +39,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="EPiServer.CMS.Web" Version="12.0.0-inte-020292" />
-    <!--
-    <PackageReference Include="Jhoose.Security.Core" Version="0.1.0-alpha.1" />
-    -->
+    <PackageReference Include="Jhoose.Security.Core" Version="0.1.0-alpha.1"  Condition=" '$(Configuration)' == 'Release' " />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
 </ItemGroup>
 
-  <ItemGroup>
+  <ItemGroup  Condition=" '$(Configuration)' == 'Debug' ">
     <ProjectReference Include="..\Jhoose.Security.Core\Jhoose.Security.Core.csproj" />
   </ItemGroup>
 
