--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -17,13 +17,10 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-    - name: Restore dependencies
-      working-directory: ./src/Jhoose.Security
-      run: dotnet restore
-      
+              
     - name: Build
       working-directory: ./src/Jhoose.Security
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build --configuration Release
       
     - name: Test
       working-directory: ./src
