--- a/.github/workflows/build-jhoose-security-core.yml
+++ b/.github/workflows/build-jhoose-security-core.yml
@@ -17,7 +17,10 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-      
+        source-url: https://nuget.pkg.github.com/andrewmarkham/index.json
+    env:
+        NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
     - name: Build
       working-directory: ./src/Jhoose.Security.Core
       run: dotnet build --configuration Release
