--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -18,6 +18,10 @@ jobs:
       with:
         dotnet-version: 5.0.x
 
+    - name: Configure Source
+      working-directory: ./src/Jhoose.Security.Core
+      run: dotnet add package source https://nuget.pkg.github.com/andrewmarkham/index.json --username andrewmarkham --password ${{ secrets.GITHUB_TOKEN }}
+
     - name: Build
       working-directory: ./src/Jhoose.Security
       run: dotnet build --configuration Release
