--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -22,6 +22,15 @@ jobs:
       working-directory: ./src/Jhoose.Security
       run: dotnet nuget add source https://nuget.pkg.github.com/andrewmarkham/index.json --store-password-in-clear-text --username andrewmarkham --password ${{ secrets.PACKAGE_TOKEN }}
 
+    - name: Use Node.js 14.4.0
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14.4.0
+
+    - name: Client Packages
+      working-directory: ./src/Jhoose.Security
+      run: npm run publish
+
     - name: Build
       working-directory: ./src/Jhoose.Security
       run: dotnet build --configuration Release
