--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  BUILD_NO: 1.0.0
+
 jobs:
   build:
 
@@ -35,7 +38,7 @@ jobs:
 
     - name: Build
       working-directory: ./src/Jhoose.Security
-      run: dotnet build --configuration Release
+      run: dotnet build --configuration Release -p:Version=${BUILD_NO}
       
     - name: Test
       working-directory: ./src
