--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -45,4 +45,4 @@ jobs:
       run: dotnet test --no-build --verbosity normal
     
     - name: nuget push
-      run: nuget push ./**/Jhoose.Security*.nupkg -Source "GitHub" -SkipDuplicate
+      run: dotnet nuget push ./**/Jhoose.Security*.nupkg --source "GitHub" --skip-duplicate
