--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -45,6 +45,6 @@ jobs:
       run: dotnet test --no-build --verbosity normal
     
     - name: nuget push
-      run: |
-       dotnet nuget list source
-       dotnet nuget push ./**/Jhoose.Security*.nupkg --source "Github" --skip-duplicate
+      run: dotnet nuget push ./**/Jhoose.Security*.nupkg -k ${GITHUB_TOKEN} -s https://nuget.pkg.github.com/andrewmarkham/index.json --skip-duplicate
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
