--- a/.github/workflows/build-jhoose-security-core.yml
+++ b/.github/workflows/build-jhoose-security-core.yml
@@ -1,10 +1,13 @@
-name: .NET
+name: Jhoose Security Core
 
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+ 
+env:
+  BUILD_NO: 1.0.0
 
 jobs:
   build:
@@ -20,7 +23,7 @@ jobs:
 
     - name: Build
       working-directory: ./src/Jhoose.Security.Core
-      run: dotnet build --configuration Release
+      run: dotnet build --configuration Release -p:Version=${BUILD_NO}
       
     - name: Test
       working-directory: ./src
