--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -1,10 +1,13 @@
-name: .NET
+name: Jhoose Security
 
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+
+env:
+  BUILD_NO: 1.0.0
 
 jobs:
   build:
@@ -20,7 +23,7 @@ jobs:
 
     - name: Configure Source
       working-directory: ./src/Jhoose.Security
-      run: dotnet nuget add source https://nuget.pkg.github.com/andrewmarkham/index.json --store-password-in-clear-text --username andrewmarkham --password ${{ secrets.PACKAGE_TOKEN }}
+      run: dotnet nuget add source https://nuget.pkg.github.com/andrewmarkham/index.json --name "Github" --store-password-in-clear-text --username andrewmarkham --password ${{ secrets.PACKAGE_TOKEN }}
 
     - name: Use Node.js 14.4.0
       uses: actions/setup-node@v1
@@ -35,22 +38,13 @@ jobs:
 
     - name: Build
       working-directory: ./src/Jhoose.Security
-      run: dotnet build --configuration Release
+      run: dotnet build --configuration Release -p:Version=${BUILD_NO}
       
     - name: Test
       working-directory: ./src
       run: dotnet test --no-build --verbosity normal
-      
-    - name: Push Nupkg to GitHub Packages
-      uses: tanaka-takayoshi/nuget-publish-to-github-packages-action@v2.1
-      with:
-        # Path of NuPkg
-        nupkg-path: ./**/Jhoose.Security*.nupkg
-        # package repository owner
-        repo-owner: 'andrewmarkham'
-        # user account
-        gh-user: 'andrewmarkham'
-        # access token
-        token: ${{ secrets.GITHUB_TOKEN }}
-        # skip publishing duplicated package(s)
-        skip-duplicate: true
+    
+    - name: nuget push
+      run: dotnet nuget push ./**/Jhoose.Security*.nupkg -k ${GITHUB_TOKEN} -s https://nuget.pkg.github.com/andrewmarkham/index.json --skip-duplicate
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
