--- a/.github/workflows/build-jhoose-security-core.yml
+++ b/.github/workflows/build-jhoose-security-core.yml
@@ -2,7 +2,7 @@ name: Jhoose Security Core
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, release ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
