--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -2,11 +2,11 @@ name: Jhoose Security
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, release ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
-  
+
 env:
   BUILD_NO: 1.0.0.r${{GITHUB_RUN_NUMBER}}
 
