--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -2,7 +2,7 @@ name: Jhoose Security
 
 on:
   push:
-    branches: [ main, release ]
+    branches: [ main, release/* ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
