--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 env:
-  BUILD_NO: 1.0.0.r${{GITHUB_RUN_NUMBER}}
+  BUILD_NO: 1.0.0.r${{ github.run_number }}
 
 jobs:
   build:
