--- a/src/Sample/DemoSite/appsettings.json
+++ b/src/Sample/DemoSite/appsettings.json
@@ -10,6 +10,6 @@
   "urls": "http://*:8000/;https://*:8001/;",
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EPiServerDB": "Server=.;Database=EPiServerDB_5602836b;User Id=EPiServerDB_5602836bUser;Password=xIzfBkZz5y@dvo4umIyiBD7xP;MultipleActiveResultSets=True"
+    "EPiServerDB": "Server=localhost;Database=EPiServerDB_2846bcb8;User Id=jhoose;Password=LetMeIn!;MultipleActiveResultSets=False"
   }
 }
