--- a/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
+++ b/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
@@ -5,14 +5,14 @@
 
     <PackageId>Jhoose.Security.Core</PackageId>
     <RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
-    <Version>1.0.0</Version>
+    <Version>1.1.0.3</Version>
     <Authors>Andrew Markham</Authors>
     
     <Title></Title>
     <Description></Description>
 	<Tags>Jhoose;Episerver;Optimizely;Content Security Policy</Tags>
 	  <ReleaseNotes>
-		  Initial Release
+		  Added the ability to output the recommended security headers
 	  </ReleaseNotes>
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -26,7 +26,9 @@
   </PropertyGroup>
 
 <ItemGroup>
-  <PackageReference Include="EPiServer.Framework" Version="12.0.3" /> 
-  <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
+  <PackageReference Include="EPiServer.Framework" Version="12.2.*" /> 
+  <PackageReference Include="EPiServer.Framework.AspNetCore" Version="12.2.*" /> 
+  
+  <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.*" />
 </ItemGroup>
 </Project>
