--- a/src/Sample/DemoSite/DemoSite.csproj
+++ b/src/Sample/DemoSite/DemoSite.csproj
@@ -14,11 +14,17 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Bogus" Version="33.0.2" />
-    <PackageReference Include="EPiServer.CMS" Version="12.0.3" />
-    <PackageReference Include="EPiServer.CMS.UI" Version="12.0.3" />
-    <PackageReference Include="EPiServer.CMS.UI.VisitorGroups" Version="12.0.3" />
+    <PackageReference Include="EPiServer.CMS" Version="12.2.1" />
+    <PackageReference Include="EPiServer.Framework" Version="12.2.0" />
+    <PackageReference Include="EPiServer.CMS.UI.Core" Version="12.2.1" />
+    <PackageReference Include="EPiServer.CMS.UI" Version="12.2.1" />
+    
+    <PackageReference Include="EPiServer.CMS.UI.VisitorGroups" Version="12.2.1" />
     <PackageReference Include="EPiServer.CMS.TinyMce" Version="3.0.1" />
-	  <PackageReference Include="Jhoose.Security.Admin" Version="1.*" />
+    <PackageReference Include="EPiServer.Framework.AspNetCore" Version="12.2.0" />
+    
     <Folder Include="wwwroot\" />
+    
+    <PackageReference Include="jhoose.security.admin" Version="1.1.0.2" />
   </ItemGroup>
 </Project>
