--- a/src/Sample/DemoSite/appsettings.json
+++ b/src/Sample/DemoSite/appsettings.json
@@ -7,9 +7,39 @@
       "Microsoft.Hosting.Lifetime": "Warning"
     }
   },
-  "urls": "http://*:8000/;https://*:8001/;",
-  "AllowedHosts": "*",
+  "urls": "https://localhost:8001/;",
+  "AllowedHosts": "localhost",
   "ConnectionStrings": {
     "EPiServerDB": "Server=localhost;Database=EPiServerDB_2846bcb8;User Id=jhoose;Password=LetMeIn!;MultipleActiveResultSets=False"
-  }
+  },
+  "JhooseSecurity": {
+      "ExclusionPaths": [
+        "/episerver"
+      ],
+      "HttpsRedirection": true,
+      "StrictTransportSecurity": {
+        "MaxAge": 31536000,
+        "IncludeSubDomains": true
+      },
+      "XFrameOptions": {
+        "Enabled": false,
+        "Mode": 0,
+        "Domain": ""
+      },
+      "XPermittedCrossDomainPolicies": {
+        "Mode": 0
+      },
+      "ReferrerPolicy": {
+        "Mode": 0
+      },
+      "CrossOriginEmbedderPolicy": {
+        "Mode": 1
+      },
+      "CrossOriginOpenerPolicy": {
+        "Mode": 2
+      },
+      "CrossOriginResourcePolicy": {
+        "Mode": 1
+      }
+    }
 }
