--- a/src/Tests/Jhoose.Security.Core.Tests/Jhoose.Security.Core.Tests.csproj
+++ b/src/Tests/Jhoose.Security.Core.Tests/Jhoose.Security.Core.Tests.csproj
@@ -5,7 +5,7 @@
 
     <IsPackable>false</IsPackable>
 
-        <RestoreSources>
+    <RestoreSources>
 		$(RestoreSources);
 		https://api.nuget.org/v3/index.json;
 		https://nuget.optimizely.com/feed/packages.svc;
@@ -13,6 +13,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPiServer.CMS.UI.Core" Version="12.*" />
+    <PackageReference Include="EPiServer.Framework.AspNetCore" Version="12.*" /> 
+    <PackageReference Include="EPiServer.Framework" Version="12.*" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
