--- a/src/Jhoose.Security/Jhoose.Security.csproj
+++ b/src/Jhoose.Security/Jhoose.Security.csproj
@@ -5,14 +5,15 @@
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <PackageId>Jhoose.Security.Admin</PackageId>
     <RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
-    <Version>1.1.0.3</Version>
+    <Version>1.1.1.3</Version>
     <Authors>Andrew Markham</Authors>
-	<Description>Interface to manage Content Security Policy </Description>
+	  <Description>Interface to manage Content Security Policy </Description>
   
     <Title></Title>
     <Tags>Jhoose;Episerver;Optimizely;Content Security Policy</Tags>
     <ReleaseNotes>
-		Added the ability to output the recommended security headers
+		1.1.0 - Added the ability to output the recommended security headers.
+    1.1.1 - Added option to disable any of the recommended security headers.
 	</ReleaseNotes>
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -33,9 +34,10 @@
 <ItemGroup>
     <PackageReference Include="EPiServer.CMS.UI.Core" Version="12.*" />
     <PackageReference Include="EPiServer.Framework.AspNetCore" Version="12.*" /> 
+    <PackageReference Include="EPiServer.Framework" Version="12.*" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.*" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.*" />
-    <PackageReference Include="EPiServer.Framework" Version="12.*" />
+    
     <PackageReference Include="Jhoose.Security.Core" Version="1.1.*" Condition=" '$(Configuration)' == 'Release' " />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.*" />
 </ItemGroup>
