--- a/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
+++ b/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
@@ -27,9 +27,9 @@
   </PropertyGroup>
 
 <ItemGroup>
-  <PackageReference Include="EPiServer.Framework" Version="12.*" /> 
-  <PackageReference Include="EPiServer.Framework.AspNetCore" Version="12.*" /> 
+  <PackageReference Include="EPiServer.Framework" Version="[12.0.3,13)" /> 
+  <PackageReference Include="EPiServer.Framework.AspNetCore" Version="[12.0.3,13)" /> 
   
-  <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.0" />
 </ItemGroup>
 </Project>
