--- a/src/Jhoose.Security/Jhoose.Security.csproj
+++ b/src/Jhoose.Security/Jhoose.Security.csproj
@@ -32,14 +32,14 @@
   </ItemGroup>
 
 <ItemGroup>
-    <PackageReference Include="EPiServer.CMS.UI.Core" Version="12.*" />
-    <PackageReference Include="EPiServer.Framework.AspNetCore" Version="12.*" /> 
-    <PackageReference Include="EPiServer.Framework" Version="12.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.*" />
+    <PackageReference Include="EPiServer.CMS.UI.Core" Version="[12.0.3,13)" />
+    <PackageReference Include="EPiServer.Framework.AspNetCore" Version="[12.0.3,13)" /> 
+    <PackageReference Include="EPiServer.Framework" Version="[12.0.3,13)" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0" />
     
-    <PackageReference Include="Jhoose.Security.Core" Version="1.1.*" Condition=" '$(Configuration)' == 'Release' " />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.*" />
+    <PackageReference Include="Jhoose.Security.Core" Version="(1.1.1" Condition=" '$(Configuration)' == 'Release' " />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0" />
 </ItemGroup>
 
   <ItemGroup Condition=" '$(Configuration)' == 'Debug' ">
