--- a/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
+++ b/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-
+	<TargetFrameworks>net461;net5.0</TargetFrameworks>
+	  
     <PackageId>Jhoose.Security.Core</PackageId>
     <RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
     <Version>1.1.1.3</Version>
@@ -13,7 +13,7 @@
 	<Tags>Jhoose;Episerver;Optimizely;Content Security Policy</Tags>
 	  <ReleaseNotes>
 		1.1.0 - Added the ability to output the recommended security headers.
-    1.1.1 - Added option to disable any of the recommended security headers.
+		1.1.1 - Added option to disable any of the recommended security headers.
 	  </ReleaseNotes>
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -26,10 +26,16 @@
 
   </PropertyGroup>
 
-<ItemGroup>
-  <PackageReference Include="EPiServer.Framework" Version="[12.0.3,13)" /> 
+<ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+  <PackageReference Include="EPiServer.Framework" Version="[12.0.3,13)"  /> 
   <PackageReference Include="EPiServer.Framework.AspNetCore" Version="[12.0.3,13)" /> 
   
   <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.0" />
+</ItemGroup>
+
+<ItemGroup Condition="'$(TargetFramework)' == 'net461'">
+  <PackageReference Include="EPiServer.Framework" Version="[11.1.0,12)"  /> 
+  <PackageReference Include="EPiServer.Framework.AspNet" Version="[11.1.0,12)" />
+	<PackageReference Include="Newtonsoft.Json" Version="[9.0.1,14)" /> 
 </ItemGroup>
 </Project>
