--- a/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
+++ b/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
@@ -27,15 +27,19 @@
   </PropertyGroup>
 
 <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
-  <PackageReference Include="EPiServer.Framework" Version="[12.0.3,13)"  /> 
+  <PackageReference Include="EPiServer.Framework" Version="[12.0.3,13)" /> 
   <PackageReference Include="EPiServer.Framework.AspNetCore" Version="[12.0.3,13)" /> 
   
   <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.0" />
 </ItemGroup>
 
 <ItemGroup Condition="'$(TargetFramework)' == 'net461'">
-  <PackageReference Include="EPiServer.Framework" Version="[11.1.0,12)"  /> 
+  <PackageReference Include="EPiServer.Framework" Version="[11.1.0,12)" /> 
   <PackageReference Include="EPiServer.Framework.AspNet" Version="[11.1.0,12)" />
 	<PackageReference Include="Newtonsoft.Json" Version="[9.0.1,14)" /> 
+</ItemGroup>
+
+<ItemGroup Condition="'$(TargetFramework)' == 'net461'">
+  <Reference Include="System.Web" />
 </ItemGroup>
 </Project>
