--- a/src/Jhoose.Security/Jhoose.Security.csproj
+++ b/src/Jhoose.Security/Jhoose.Security.csproj
@@ -47,6 +47,7 @@
 		<PackageReference Include="Newtonsoft.Json" Version="[9.0.1,14)" />
 
 		<PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
+		<PackageReference Include="Microsoft.AspNet.WebApi.WebHost" Version="5.2.7" />
 	</ItemGroup>
 	
   <ItemGroup Condition=" '$(Configuration)' == 'Debug' ">
