--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 env:
-  BUILD_NO: 1.1.1.${{ github.run_number }}
+  BUILD_NO: 1.2.0.${{ github.run_number }}
   
 jobs:
   build:
@@ -20,7 +20,9 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: |
+        4.6.1
+        5.0.x
 
     - name: Configure Source
       working-directory: ./src/Jhoose.Security
