--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -42,7 +42,7 @@ jobs:
       
     - name: Build app for release
       working-directory: ./src/Jhoose.Security
-      run: msbuild Jhoose.Security.csproj -t:rebuild -verbosity:diag -property:Configuration=Release -p:Version=${BUILD_NO}
+      run: msbuild Jhoose.Security.csproj -t:rebuild -property:Configuration=Release -p:Version=${BUILD_NO}
 
     - name: Test
       working-directory: ./src
