--- a/src/Jhoose.Security/Jhoose.Security.csproj
+++ b/src/Jhoose.Security/Jhoose.Security.csproj
@@ -6,6 +6,7 @@
     <PackageId>Jhoose.Security.Admin</PackageId>
     <RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
     <Version>1.1.1.3</Version>
+    <PackageVersion>1.1.1.3</PackageVersion>
     <Authors>Andrew Markham</Authors>
 	  <Description>Interface to manage Content Security Policy </Description>
   
