--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Nuget Restore
       working-directory: ./src/Jhoose.Security
-      run: dotnet restore
+      run: dotnet restore --ignore-failed-sources 
 
     - name: Use Node.js 14.4.0
       uses: actions/setup-node@v1
