--- a/.github/workflows/build-jhoose-security-core.yml
+++ b/.github/workflows/build-jhoose-security-core.yml
@@ -13,16 +13,14 @@ env:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
 
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: |
-        4.6.1
-        5.0.x
+        dotnet-version: 5.0.x
 
     - name: Build
       working-directory: ./src/Jhoose.Security.Core
