--- a/.github/workflows/build-jhoose-security-core.yml
+++ b/.github/workflows/build-jhoose-security-core.yml
@@ -24,11 +24,11 @@ jobs:
 
     - name: Build
       working-directory: ./src/Jhoose.Security.Core
-      run: dotnet build --configuration Release -p:Version=${BUILD_NO}
+      run: dotnet build --configuration Release -p:Version=${{ env.BUILD_NO }}
       
     - name: Test
-      working-directory: ./src
-      run: dotnet test --no-build --verbosity normal
+      working-directory: ./src/Jhoose.Security.Core
+      run: dotnet test --configuration Release --no-build --verbosity normal
       
     - name: Push Nupkg to GitHub Packages
       uses: tanaka-takayoshi/nuget-publish-to-github-packages-action@v2.1
