--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -42,7 +42,7 @@ jobs:
        npm run publish
 
     - name: Build
-      run: dotnet build --configuration Release -p:Version=${BUILD_NO}
+      run: dotnet build --configuration Release -p:Version=${{ env.BUILD_NO }}
       working-directory: ./src/Jhoose.Security
       
     #- name: Build app for release
@@ -50,10 +50,11 @@ jobs:
     #  run: msbuild Jhoose.Security.csproj -t:rebuild -property:Configuration=Release -property:NuGetVersion=${BUILD_NO} -p:Version=NuGetVersion=${BUILD_NO}
 
     - name: Test
-      working-directory: ./src
-      run: dotnet test --no-build --verbosity normal
+      working-directory: ./src/Jhoose.Security
+      run: dotnet test --configuration Release  --no-build --verbosity normal
     
    #   - name: nuget push
    #     run: dotnet nuget push ./**/Jhoose.Security*.nupkg -k ${GITHUB_TOKEN} -s https://nuget.pkg.github.com/andrewmarkham/index.json --skip-duplicate
    #     env:
    #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    
