--- a/.github/workflows/build-jhoose-security-core.yml
+++ b/.github/workflows/build-jhoose-security-core.yml
@@ -27,7 +27,7 @@ jobs:
       run: dotnet build --configuration Release -p:Version=1.2.0.0
       
     - name: Test
-      working-directory: ./src
+      working-directory: ./src/Jhoose.Security.Core
       run: dotnet test --no-build --verbosity normal
       
     - name: nuget push
