--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -55,6 +55,6 @@ jobs:
     
     - name: nuget push
       working-directory: ./src/Jhoose.Security
-      run: dotnet nuget push ./**/Jhoose.Security*.nupkg -k ${{ env.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/andrewmarkham/index.json --skip-duplicate
+      run: dotnet nuget push ./bin/Release/Jhoose.Security*.nupkg -k ${{ env.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/andrewmarkham/index.json --skip-duplicate
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
