--- a/src/Jhoose.Security/Jhoose.Security.csproj
+++ b/src/Jhoose.Security/Jhoose.Security.csproj
@@ -5,8 +5,7 @@
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <PackageId>Jhoose.Security.Admin</PackageId>
     <RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
-    <Version>1.1.1.3</Version>
-    <PackageVersion>1.1.1.3</PackageVersion>
+    <Version>1.2.0.0</Version>
     <Authors>Andrew Markham</Authors>
 	  <Description>Interface to manage Content Security Policy </Description>
   
@@ -15,6 +14,7 @@
     <ReleaseNotes>
 		    1.1.0 - Added the ability to output the recommended security headers.
         1.1.1 - Added option to disable any of the recommended security headers.
+        1.2.0 - Target .Net Framework and Episerver 11
 	</ReleaseNotes>
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
