update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ src/Tests/Jhoose.Security.Core.Tests/bin/
 src/Tests/Jhoose.Security.Core.Tests/obj/
 
 src/Test/Management/modules/
+
+src/packages/
+
+src/Sample/DemoSite461/obj/
